# tech-blog

./: .gitignore  .travis.yml  404.html  CHANGELOG.md  CNAME  README.md  blog.html  index.html  stack.yaml  tech-blog.cabal
app/: Main.hs
blog/: 2019-02-27-test-md.md  2019-03-29-experience-summary.html  2019-03-29-experience-summary.md  2019-03-29-why-haskell.html  2019-03-29-why-haskell.md  2020-05-18-Generating-documentation-from-API-types.html  2020-05-18-Generating-documentation-from-API-types.md  2020-09-17-Different-types-of-documentation.html  2020-09-17-Different-types-of-documentation.md  2020-09-17-Experiences-of-our-engineer-intern-team-Summer-2020.html  2020-09-17-Experiences-of-our-engineer-intern-team-Summer-2020.md  2020-09-17-Technical-writing-and-copyediting.html  2020-09-17-Technical-writing-and-copyediting.md  2020-12-18-How-is-office-culture-produced-maintained-transformed.html  2020-12-18-How-is-office-culture-produced-maintained-transformed.md  2021-03-09-Introduction-to-UX-research-Part-1.html  2021-03-09-Introduction-to-UX-research-Part-1.md  2021-03-09-Introduction-to-UX-research-Part-2.html  2021-03-09-Introduction-to-UX-research-Part-2.md  2021-05-05-are-functions-everything-in-haskell.html  2021-05-05-are-functions-everything-in-haskell.md  2021-05-29-using-rust.md
css/: _clean-blog-sass.sass  _fonts.scss  clean-blog.min.css  main.css  main.sass
js/: main.js
scripts/: deploy.sh
src/: TechBlog.hs
src/TechBlog/: Blog.hs  Context.hs  Project.hs
tags/: UX.html  culture.html  design.html  documentation.html  haskell.html  internships.html  product.html  software engineering.html  software requirements.html  technical writing.html  user experience.html
templates/: blog.html  default.html  default_with_banner.html  footer.html  main.html  post.html
